--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ body {
 
 .text {
 	font-weight: 900;
-	color: white;
+	color: black;
 	text-transform: uppercase;
 	margin: 0;
 	position: absolute;
