--- a/css/style.css
+++ b/css/style.css
@@ -296,9 +296,27 @@ body {
 	/*background:linear-gradient(rgba(256, 256, 256, 0.6),rgba(256, 256, 256, 0.6));*/
 }
 
+#inactive {
+	color: #555;
+	cursor: not-allowed;
+}
+
+.inactive-state {
+	opacity: 0.3;
+}
+
+#inactive:hover {
+	/*cursor: not-allowed;*/
+}
+
 .location:hover {
 	background:linear-gradient(rgba(256, 256, 256, 0.4),rgba(256, 256, 256, 0.4));
 	cursor: pointer;
+}
+
+.location-info {
+	font-size: 10px;
+	font-style: italic;
 }
 
 #img-state {
